[package]
name = "matrix-html"
version = "0.1.0"
authors = ["Devin Ragotzy <devin.ragotzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
thiserror = "1.0.20"

[dependencies.syntect]
version = "4.4.0"
default-features = false
features = ["parsing", "assets", "dump-load-rs", "regex-fancy"]

[dependencies.pulldown-cmark]
version = "^0.8"
default-features = false
features = ['simd']